--- a/src/main/resources/application-example.properties
+++ b/src/main/resources/application-example.properties
@@ -1,11 +1,11 @@
 spring.application.name=my-backend
 
-# MySQL ?????? ?? ??
+# MySQL 데이터베이스 연결 설정
 spring.datasource.url=jdbc:mysql://localhost:3306/my_backend_db
 spring.datasource.username=root
-# ??? ?? ?????? ???? ??.
+# 아래에 실제 데이터베이스 비밀번호를 입력
 spring.datasource.password=your_database_password # 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA(Hibernate) ??
+# JPA(Hibernate) 설정
 spring.jpa.hibernate.ddl-auto=update
